--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,13 @@ h3{
 a{
     text-decoration: none;
 }
+@media screen and (max-width:960px) {
+    .tech{
+        flex-direction: column;
+    }
+    p{
+      font-size: x-large; 
+      padding: 2em 1.5em 1em 1.5em; 
+      
+    }
+}
