--- a/styles.css
+++ b/styles.css
@@ -114,13 +114,12 @@ h3{
 a{
     text-decoration: none;
 }
-@media screen and (max-width:960px) {
+@media screen and (min-width:480px) {
     .tech{
         flex-direction: column;
     }
     p{
       font-size: x-large; 
-      padding: 2em 1.5em 1em 1.5em; 
-      
+
     }
 }
