--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,16 @@ a{
         flex-direction: column;
     }
     p{
-      font-size: x-large; 
+      font-size: x-large;
 
+    }
+    .bodycontent{
+        flex-direction: column;
+    }
+    .coding img{
+        width: 300px;
+    }
+    .coding span{
+        font-size: x-large;
     }
 }
